/*
 * $Id: ChangeLog,v 1.615 2003/01/12 01:56:59 horacioroldan Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-12 02:30 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/rdd/dbfcdx/dbfcdx1.c
    + ordKeyAdd/Del, now accepts optional value to be used as the key
    ! added cast for MSVC

2003-01-11 10:52 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/pp/pptable.c
    ! fixed while support for rddads
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx2.h
  * source/rdd/dbfcdx/dbfcdx1.c
    ! fixed internal counter that may produce a GPF
    + added support for Unique indexes
    + added support for Custom Indexes
    * work in progress: support for temporary indexes
    + added functions hb_cdxFindBag, hb_cdxEvalKey

2003-01-11 19:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    ! Added MT support for hbmake Edit mode

2003-01-11 12:53 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * makefile.bc
    ! Added support for a user defined ARFLAGS
      * if you use -v -y in your CFLAGS, you HAVE to set ARFLAGS to /P64
        to be able to make the MT lib files.

2003-01-11 03:15 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * samples/sitesrv/bldsrv.bat
    * fixed error on bld.bat path

2003-01-10 17:58 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * make_b32.bat
    - Removed options [ST|MT|BOTH] now always make BOTH sets of libs.

  * bin/bld.bat
  * makefile.bc
    + Added mt support for rddmt.lib

  /*
     NOTE: Make_b32 and soon all make procedures ALWAYS create both set of libraries ST and MT. The affected lib are:
           vm[mt].lib rtl[mt].lib rdd[mt].lib dbntx[mt].lib dbfcdx[mt].lib

           Bld_b32.bat and similiar applications and samples build batch by default link ST version of libs unless